// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo → *
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 1,
                   current: foo | 1 | 11
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 2,
                             current: 12
                           }
                        }},
                        3. filter {{}}
                      ]
                     [(empty list)]}
                ]}
           ]}
      ]},
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`graphite: show bar 2`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo → *
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 1,
                   current: foo | 1 | 11
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 2,
                             current: 12
                           }
                        }},
                        3. filter {{}}
                      ]
                     [(empty list)]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show foo 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. emit {{
                 fullName: foo → *
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 1,
                             current: foo | 1 | 11 | 101
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. filter {{}}
                           ]
                           Next [
                             *  Graph {
                                Seq [
                                  1. filter {{}},
                                  2. update {{
                                     store: {
                                       id: 2,
                                       current: 18
                                     }
                                  }},
                                  3. filter {{}}
                                ]
                               [(empty list)]}
                          ]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show store1 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 1,
         current: foo | 1 | 11 | 101
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 2,
                   current: 18
                 }
              }},
              3. filter {{}}
            ]
           [(empty list)]}
      ]}
  ]}"
`;

exports[`graphite: show store2 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 2,
         current: 18
       }
    }},
    3. filter {{}}
  ]
  [(empty list)]}"
`;

exports[`showcase: event foo 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 3,
                   current: 3
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. filter {{}},
                   2. compute {{}},
                   3. compute {{}},
                   4. barrier {{
                      barrierID: 1
                   }},
                   5. compute {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 5,
                             current: {
                               a: 3,
                               b: 6
                             }
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. filter {{}}
                           ]
                           Next [
                             *  Graph {
                                Seq [
                                  1. filter {{}},
                                  2. update {{
                                     store: {
                                       id: 7,
                                       current: 3
                                     }
                                  }},
                                  3. filter {{}}
                                ]
                                Next [
                                  *  Graph {
                                     Seq [
                                       1. compute {{}},
                                       2. run {{}}
                                     ]
                                    [(empty list)]}
                               ]}
                          ]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`showcase: mapped 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 7,
         current: 3
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`showcase: store a 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 3,
         current: 3
       }
    }},
    3. filter {{}}
  ]
  Next [
    *  Graph {
       Seq [
         1. filter {{}},
         2. compute {{}},
         3. compute {{}},
         4. barrier {{
            barrierID: 1
         }},
         5. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 5,
                   current: {
                     a: 3,
                     b: 6
                   }
                 }
              }},
              3. filter {{}}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 7,
                             current: 3
                           }
                        }},
                        3. filter {{}}
                      ]
                      Next [
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. run {{}}
                           ]
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;
